--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
+body {
+  background-image: linear-gradient(120deg, #900C3F 0%, #C70039 100%);
+  color: rgba(255, 255, 255, 0.8);
+  font-family: "Poppins", sans-serif;
+  min-height: 100vh;
+}
+
+header {
+  font-size: 2rem;
+  margin: 2rem;
+}
+
+header, form {
+  /* min-height: 20vh; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form input, 
+form button {
+  padding: 1rem;
+  border: none;
+  font-size: 2rem;
+  background: rgba(255, 255, 255, 0.7) 
+}
+
+.todo-button {
+  color: 	 #900C3F;
+  background: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+}
+
+.todo-button:hover {
+  background: #900C3F;
+  color:  rgba(255, 255, 255, 0.7);
+}
+
+.filter-todo {
+  padding: 1.2rem;
+  margin: 2rem;
+}
+
+.todo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  color: #900C3F;
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  width: 12rem;
+}
+
+.todo {
+  margin: 0.5rem;
+  background: white;
+  color: black;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 1s ease;
+}
+
+.todo li {
+  flex: 1;
+}
+
+.todo-item {
+  padding: 0rem 0.5rem;
+}
+
+.fa-trash, .fa-check {
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.trash-button, .complete-button {
   color: white;
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.complete-button {
+  background: #00b300;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.trash-button {
+  background: #900C3F;
+}
+
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
 }
